# advent-of-code

./: Cargo.toml  README.md
challenges/day01/: Cargo.toml
challenges/day01/src/: lib.rs  main.rs  part_01.rs  part_02.rs
challenges/day02/: Cargo.toml
challenges/day02/src/: main.rs  part_01.rs  part_02.rs
challenges/day03/: Cargo.toml
challenges/day03/benches/: bench_day03.rs
crates/day01/src/: main.rs
crates/day02/src/: main.rs
crates/day03/src/: lib.rs
examples/: str_byte.rs
tests/: day03.rs
utils/src/: lib.rs
