[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["challenges/*"]

[workspace.dependencies]
criterion = "0.4.0"

[dependencies]
day03 = { path = "./challenges/day03" }
